manifests/mttr.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mttr

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mttr
  namespace: mttr
  labels:
    app: hello-world

spec:
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: mttr
    spec:
      containers:
      - name: hello-world
        image: exiges/mttr:latest
        resources:
          requests:
            cpu: 250m
        readinessProbe:
          httpGet:
            path: /ready
            port: 9000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 1
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /live
            port: 9000
          initialDelaySeconds: 10
          # Allow sufficient amount of time (180 seconds = periodSeconds * failureThreshold)
          # for the registered shutdown handlers to run to completion.
          periodSeconds: 30
          failureThreshold: 3
          successThreshold: 1
        ports:
        - containerPort: 8000
        - containerPort: 9000

---

apiVersion: v1
kind: Service
metadata:
 name: hello-world
 namespace: hello-world
 labels:
   app: mttr
spec:
 ports:
 - port: 80
   targetPort: 8000
   name: http
 selector:
   app: mttr
 type: ClusterIP

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mttr
  namespace: mttr
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - mttr.k8s-poc.fdscloud.io
    secretName: mttr-tls-secret
  rules:
  - host: mttr.k8s-poc.fdscloud.io
    http:
      paths:
      - path: /
        backend:
          serviceName: mttr
          servicePort: http
